--- a/style.css
+++ b/style.css
@@ -2,4 +2,18 @@
     font-family: 'Dancing Script', cursive;
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.caixa {
+    width: 50%;
+    height: 50%;
+    background: red;
+}
+
+.caixa .caixa-filho {
+    width: 100%;
+    height: 60%;
+    background: peru;
 }
