--- a/flex.css
+++ b/flex.css
@@ -3,3 +3,21 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.container {
+    width: 100%;
+    height: 900px;
+    background: olivedrab;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    column-gap: 20px;
+}
+
+.caixa {
+    width: 100px;
+    height: 100px;
+    background: blue;
+    opacity: 0.4;
+}
